# xorg-integration-tests

./: .gitignore  99-ignore-virtual-devices.conf  99-tag-virtual-devices.rules  COPYING  HACKING  Makefile-xorg-gtest.am  Makefile.am  README  common.mk  configure.ac
doc/: .gitignore  Doxyfile.in  Makefile.am
m4/: xorg-gtest.m4
recordings/: Makefile.am
recordings/keyboards/: AT Translated Set 2 Keyboard.desc
recordings/mice/: Logitech-USB-Trackball.desc  Microsoft-Microsoft®-2.4GHz-Transceiver-V2.0.desc  PIXART USB OPTICAL MOUSE-HWHEEL.desc  PIXART-USB-OPTICAL-MOUSE.desc  Xen-Virtual-Pointer.desc
recordings/tablets/: N-Trig-MultiTouch.desc  N-Trig-MultiTouch.touch_1_update.events  Wacom-Cintiq-12WX.desc  Wacom-Intuos4-8x13.lens-cursor-move.events  Wacom-Intuos5-touch-M-Pen-hovering-expresskeys.events  hovering-expresskeys.events  n4.desc  n4.events
recordings/touchpads/: SynPS2 Synaptics TouchPad-two-finger-scroll-up.events  SynPS2 Synaptics TouchPad.desc  SynPS2-Synaptics-TouchPad-Clickpad.left-phys-click.events  SynPS2-Synaptics-TouchPad-Clickpad.one-finger-down.events  SynPS2-Synaptics-TouchPad-Clickpad.one-finger-up.events  SynPS2-Synaptics-TouchPad-Clickpad.right-phys-click.events  SynPS2-Synaptics-TouchPad-Clickpad.tap.events  SynPS2-Synaptics-TouchPad-Clickpad.two-finger-down.events  SynPS2-Synaptics-TouchPad-Clickpad.two-finger-scroll-down.events  SynPS2-Synaptics-TouchPad-Clickpad.two-finger-scroll-up.events  SynPS2-Synaptics-TouchPad-Clickpad.two-finger-up.events  SynPS2-Synaptics-TouchPad-T440.desc  SynPS2-Synaptics-TouchPad-move.events  SynPS2-Synaptics-TouchPad-tap-and-move.events  SynPS2-Synaptics-TouchPad-tap.events  SynPS2-Synaptics-TouchPad-two-finger-scroll-down.events
registry/: example.xml  server-registry.xml  xit-bug-registry  xit-bug-registry-test  xit.py
scripts/: code-setup  rhel6-setup
tests/: .gitignore  Makefile.am  acecad.cpp  device-interface.h  evdev.cpp  helpers.cpp  helpers.h  input-driver-test.cpp  input-driver-test.h  kbd.cpp  legacy-drivers.cpp  libXi.cpp  mouse.cpp  synaptics.cpp  test-input-load.cpp  wacom.cpp  wacom_devs.h  xorg-conf.cpp  xorg-conf.h
tests/common/: Makefile.am  device-emulated-interface.cpp  device-emulated-interface.h  device-interface.cpp  device-interface.h  helpers.cpp  helpers.h  input-driver-test.cpp  input-driver-test.h  video-driver-test.cpp  video-driver-test.h  xit-event.h  xit-property.cpp  xit-property.h  xit-server-input-test.cpp  xit-server-input-test.h  xit-server-test.cpp  xit-server-test.h  xit-server.cpp  xit-server.h  xorg-conf.cpp  xorg-conf.h
tests/input/: .gitignore  Makefile.am  evdev.cpp  input-module-load.cpp  kbd.cpp  legacy-drivers.cpp  mouse.cpp  synaptics.cpp  wacom-hovering-expresskeys.cpp  wacom-input-matrix.cpp  wacom.cpp  wacom_devs.h
tests/lib/: Makefile.am  libX11.cpp  libXi.cpp
tests/server/: .gitignore  Makefile.am  barriers-common.h  barriers-devices.cpp  barriers-directions.cpp  barriers-notify.cpp  barriers-validity.cpp  dga.cpp  gestures-common.h  gestures.cpp  grab-gestures.cpp  grab.cpp  input.cpp  misc.cpp  multihead.cpp  touch.cpp  xephyr.cpp  xi2.cpp  xigrabbutton.cpp  xtest.cpp
tests/video/: .gitignore  Makefile.am  video-module-load.cpp
