include $(top_srcdir)/common.mk

noinst_LIBRARIES = libxit.a

common_sources =  \
		 $(top_srcdir)/tests/common/xit-event.h \
		 $(top_srcdir)/tests/common/xit-server-test.cpp \
		 $(top_srcdir)/tests/common/xit-server-test.h \
		 $(top_srcdir)/tests/common/xit-server.cpp \
		 $(top_srcdir)/tests/common/xit-server.h \
		 $(top_srcdir)/tests/common/xit-server-input-test.cpp \
		 $(top_srcdir)/tests/common/xit-server-input-test.h \
		 $(top_srcdir)/tests/common/xorg-conf.cpp \
		 $(top_srcdir)/tests/common/xorg-conf.h \
		 $(top_srcdir)/tests/common/helpers.cpp \
		 $(top_srcdir)/tests/common/helpers.h \
		 $(top_srcdir)/tests/common/device-interface.cpp \
		 $(top_srcdir)/tests/common/device-interface.h  \
		 $(top_srcdir)/tests/common/video-driver-test.h

libxit_a_SOURCES = $(common_sources)
